Fix card name truncate

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 html {
+  box-sizing: border-box;
   height: 100%;
   margin: 0;
 }
